# monorepo

dis_feat/dis_feat/encoding/: __init__.py
dis_feat/docs/source/: conf.py
dis_feat/scripts/: converage.sh  type_check.sh
dis_feat/tests/: test_pypackage.py
dis_mod/: README.md  pyproject.toml
dis_mod/dis_mod/base/: model.py
dis_mod/dis_mod/base/wrappers/: __init__.py  base_wrapper.py  pyod_wrapper.py  sklearn_wrapper.py
dis_mod/dis_mod/clustering/: __init__.py  bayesian_gaussian_mixture.py  gaussian_mixture.py
dis_mod/dis_mod/decomposition/: __init__.py  factor_analysis.py  fast_ica.py  kernel_pca.py  pca.py  svd.py  tsne.py  umap.py
dis_mod/dis_mod/metrics/clustering/: -TODO.md  __init__.py  davies_bouldin.py  silhouette.py  variance_ratio.py
dis_mod/dis_mod/outliers/: LOF.py
dis_mod/docs/source/: conf.py
dis_mod/scripts/: converage.sh  type_check.sh
dis_mod/tests/test_base/: test_base_metrics.py  test_optimizable_model.py
dis_viz/: pyproject.toml
dis_viz/dis_viz/heatmap/: correlation.py
dis_viz/dis_viz/setup/: theme.py
dis_viz/docs/source/: conf.py
dis_viz/scripts/: converage.sh  type_check.sh
dis_viz/tests/: test_pypackage.py
exploration/: pyproject.toml
exploration/dis_exp/correlation/: correlation.py
exploration/tests/: test_dis_exp.py
feature_engineering/: pyproject.toml
feature_engineering/dis_feat/encoding/: __init__.py  bin.py
feature_engineering/tests/: test_pypackage.py
input_output/: pyproject.toml
input_output/tests/: test_dis_io.py
models/: pyproject.toml
scripts/: converage.sh  type_check.sh
(+34 files in other folders)
