[tool.poetry]
name = "dis_mod"
version = "0.1.0"
description = ""
authors = ["Mikkel Vilstrup <mikkel@vilstrup.dk>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
numpy = "^1.21.1"
scikit-learn = "^0.24.2"
umap-learn = "^0.5.1"
scipy = "^1.7.1"
pandas = "^1.3.1"
optuna = "^2.9.1"
plotly = "^5.1.0"
pyod = "^0.9.0"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
coverage = "^5.5"
mypy = "^0.910"
pre-commit = "^2.14.0"
pylint = "^2.9.6"
Sphinx = "^4.1.2"
coveralls = "^3.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
