[tool.poetry]
name = "dis_exp"
version = "0.1.0"
description = ""
authors = ["Mikkel Vilstrup <mikkel@vilstrup.dk>"]

[tool.poetry.dependencies]
python = ">=3.6.1,<4.0"
dis_viz = {path = "../visualization", develop = true}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
